# miscutils

audio/: concatenate.py  loop_seamless.py  loop_to_dur.py  mix.py
audio/hit_extraction/: CMakeLists.txt  main_basic.cpp  readme.txt
audio/puredata/: transient+pitch.pd
audio/puredata/rnd_sample/: 01.pd
audio/scripts/: make_seamless.py
audio/scripts/concatenation/: concatenate.py
audio/scripts/hit_extraction/: main.cpp  transient_extractor
audio/scripts/looping/: loop_to_dur.py
audio/scripts/mixdown/: mixdown.py
bitmap/gif_mirror/: app.py
bitmap/ios_icons/: gen.py
text/tts/macos/: example.txt  tts_lines.sh  tts_lines_clarg.sh
text_to_speech/macos/: tts_doc.sh
video/image_strobe/: README.md
video/imgstrob/: app.py
